methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:5: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if (isFacingTrail()) {
                       ^SlugSnail:11: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if (isFacingTrail()) {
                         ^